# coot

./: 0-coot-history.py  0-coot-history.scm  Makefile.am  configure.ac  coot.rb
coot-download/: 1uyl_map.mtz  pdb1uyl.ent
flexr/: Makefile.am
flexr/src/: Makefile.am
flexr/src/MSA/: Makefile.am  ringer_MSA.py
flexr/src/building/: Makefile.am  flexr_build.py
flexr/src/flexrpkg/: Makefile.am  top_level.py
flexr/src/tools/: Makefile copy.am  Makefile.am  arguments.py  ringer_tools.py
python/: Makefile.am  coot_load_modules.py.in  extensions.py  flexr.py  flexr_extentions.py  populate_python_menus.py
python/src/: Makefile.am
src/: c-interface-build-gui.cc  create-menu-item-actions.cc  glade-callbacks-main-window.cc  graphics-info-gui.cc  graphics-info.h  new-startup.cc  startup-utils.cc
ui/: coot-gtk4.ui
