# Makefile.am
#
# Copyright 2012 Kevin Keating
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or (at
# your option) any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
# 02110-1301, USA

flexrdir = $(pythondir)/coot/src
flexrlibdir = $(pythondir)/coot/library

dist_flexr_DATA = \
   src/building/__init__.py         \
   src/building/flexr_analysis.py           \
   src/building/flexr_build.py           \
   src/flexrpkg/flexr_find.py     \
   src/flexrpkg/top_level.py  \
   src/flexrpkg/__init__.py  \
   src/tools/__init__.py  \
   src/tools/arguments.py  \
   src/tools/ringer_tools.py

dist_flexrlib_DATA = \
   library/rotamer_library_coot.csv
