# Makefile.am
#
# Copyright 2012 Kevin Keating
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or (at
# your option) any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
# 02110-1301, USA

flexrdir = $(pythondir)/coot/src

dist_flexr_DATA = \
   building/__init__.py         \
   building/flexr_analysis.py           \
   building/flexr_build.py           \
   flexrpkg/flexr_find.py     \
   flexrpkg/top_level.py  \
   flexrpkg/__init__.py  \
   tools/__init__.py  \
   tools/arguments.py  \
   tools/ringer_tools.py
